--- a/Todo List/src/style.css
+++ b/Todo List/src/style.css
@@ -41,6 +41,7 @@ details .icon-summary {
   transition: .3s ease;
   transform-origin: center;
 }
+
 details[open] .icon-summary {
   transform: rotateX(180deg);
 }
@@ -90,19 +91,19 @@ textarea {
   font-weight: 300;
 }
 
-/* daha düzenlemedim */
+/* Modal taken from W3 tutorials */
 .modal {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px; /* Location of the box */
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
 .modal-box {
@@ -118,15 +119,7 @@ textarea {
   border-image: linear-gradient(90deg, var(--highlight) 10%, white 90%) 30;
 }
 
-
-
-
-
-
 /* Custom classes */
-
-
-
 .flex {
   display: flex;
 }
